--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 <body>
 
 	<!-- Add a title: -->
-	<h1></h1>
-
+	<h1>My Webpage</h1>
+	<h2>sub section/h2>
 	<!-- Add a paragraph: -->
-	<p></p>
+	<p><Morant has been seeking assistance for what he described
+		   in a statement as a need "to get help and work on 
+		learning better methods of dealing with stress and my 
+		overall well-being," and that has taken him out of 
+		   Memphis on a leave from the team, sources said.
+
+p>
 
 	<!-- Find an url and create a link: -->
-	<a href="#"></a>
+	<a href="https://www.google.com"></a>
 
 	<!-- Find an online image and create an image tag -->
-	<img src="#" alt="">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png alt="basketball">
 
 	<!-- Make an unorder list of foods you like -->
 	<ul>
